--- a/Doc/Doc.tex
+++ b/Doc/Doc.tex
@@ -630,6 +630,12 @@ fn main -> void
 					\drmrule{\textnormal{\code{t} is a non-null ref. type}}{S}{E}{\mc{null of t} :: \mc{t?}}{ExpNull}
 				\end{align*}
 				
+			\subsubsection{Dangerous Dereference}
+			
+				\begin{align*}
+					\drmrule{S\ruleapp{E} \mc{exp} :: \mc{t?}}{S}{E}{\mc{assert exp} :: \mc{t}}{ExpDeref}
+				\end{align*}
+				
 			\subsubsection{Ternary Operator}
 			
 				\begin{align*}
@@ -1077,6 +1083,7 @@ fn main -> void
 				                 | %Null %Of RefType
 				                 | %LBrack %RBrack %Of Type
 				                 | %QuestionMark Expression %Arrow Expression %Colon Expression
+ 				                 | %Assert Expression
 				                 | ExprPrec30
 				
 				ExprPrec20       ::= 
